[gd_scene load_steps=16 format=3 uid="uid://e4wv43pmsssg"]

[ext_resource type="Script" uid="uid://cibingwj1aaa2" path="res://Scenes/Player/Player3D.gd" id="1_awgpe"]
[ext_resource type="Texture2D" uid="uid://du7ando0a4vb1" path="res://Scenes/Player/standing.png" id="2_ggayc"]
[ext_resource type="Resource" uid="uid://3cqk2c2utyuw" path="res://Scenes/3dWorld/MapStuff/TerrainMask.tres" id="2_gqm3a"]
[ext_resource type="Texture2D" uid="uid://cqv2gr4x48o1o" path="res://Scenes/Player/walk2.png" id="3_ggayc"]
[ext_resource type="Texture2D" uid="uid://db0m4e286ui22" path="res://Scenes/Player/walk1.png" id="3_hkfi6"]
[ext_resource type="Script" uid="uid://cx6s327378stm" path="res://Scenes/Player/camera_3d.gd" id="7_jxwbu"]
[ext_resource type="Script" uid="uid://bf3icv5elf6u7" path="res://Scenes/3dWorld/Sprite3DHelper.gd" id="8_0ny3v"]
[ext_resource type="Script" uid="uid://d1jp2ouxf7dc5" path="res://Scenes/Player/PlayerInput.gd" id="8_254wg"]
[ext_resource type="Script" uid="uid://d350u8evihs1u" path="res://addons/netfox/rollback/rollback-synchronizer.gd" id="9_q1k55"]
[ext_resource type="Script" uid="uid://dour8fehaaugp" path="res://addons/netfox/tick-interpolator.gd" id="10_ye1a3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_uq6qx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ggayc")
}],
"loop": true,
"name": &"stand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ggayc")
}, {
"duration": 1.0,
"texture": ExtResource("3_hkfi6")
}],
"loop": true,
"name": &"walk",
"speed": 3.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_aeyrk"]
size = Vector3(0.1, 1, 0.1)

[sub_resource type="SphereShape3D" id="SphereShape3D_brba3"]
radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gqm3a"]
shading_mode = 0
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="TorusMesh" id="TorusMesh_gqm3a"]
inner_radius = 0.007
outer_radius = 0.041
rings = 12
ring_segments = 3

[node name="Player_N" type="CharacterBody3D" groups=["players"]]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
collision_layer = 4
script = ExtResource("1_awgpe")
terrain = ExtResource("2_gqm3a")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="." node_paths=PackedStringArray("sprite")]
transform = Transform3D(1.2, 0, 0, 0, -5.24537e-08, 1.2, 0, -1.2, -5.24537e-08, 0, 0, 0)
billboard = 1
texture_filter = 4
sprite_frames = SubResource("SpriteFrames_uq6qx")
animation = &"stand"
script = ExtResource("8_0ny3v")
sprite = NodePath(".")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_aeyrk")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0)
size = 10.0
near = 1.0
script = ExtResource("7_jxwbu")

[node name="AutofireArea3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AutofireArea3D"]
shape = SubResource("SphereShape3D_brba3")
debug_color = Color(0.620153, 0.472236, 0.668747, 0.42)

[node name="GlobalPositionHelper" type="MeshInstance3D" parent="."]
visible = false
material_override = SubResource("StandardMaterial3D_gqm3a")
mesh = SubResource("TorusMesh_gqm3a")

[node name="Input" type="Node" parent="."]
script = ExtResource("8_254wg")

[node name="RollbackSynchronizer" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("9_q1k55")
root = NodePath("..")
state_properties = Array[String]([":global_transform"])
input_properties = Array[String](["Input:movement"])
enable_input_broadcast = false
metadata/_custom_type_script = "uid://d350u8evihs1u"

[node name="TickInterpolator" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("10_ye1a3")
root = NodePath("..")
properties = Array[String]([":global_transform"])
metadata/_custom_type_script = "uid://dour8fehaaugp"
